fixed margin, padding, font colors, alignments, word spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,54 @@
-body {
-  margin: 20px;
-  padding: 40px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url("/assets/images/blurred_backgrounds/blur_bg_3.jpg");
-  background-size:     cover;                     
-  background-repeat:   no-repeat;
-  background-position: center center;
+@media (min-width: 600px){
+  body {
+    margin: 20px;
+    padding: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-image: url("/assets/images/blurred_backgrounds/blur_bg_3.jpg");
+    background-size:     cover;                     
+    background-repeat:   no-repeat;
+    background-position: center center;
 
-  color:white;
-  text-align: center;
+    color:white;
+    text-align: center;
 
-}
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+      monospace;
+  }
 
 
-.landing {
-  color: white;
-  text-align: center;
-}
+  .landing {
+    color: white;
+    text-align: center;
+  }
 
-.hero-title {
-    overflow: hidden;
-    width: 100%;
-    margin: 0 auto 0 auto;
-}
+  .hero-title {
+      overflow: hidden;
+      width: 100%;
+      margin: 0 auto 0 auto;
+  }
 
-#song-list {
-  color:black;
-  padding: 20px;
+  #song-list {
+    color:black;
+    padding: 20px;
+    text-align:center; 
+    margin-left:auto; 
+    margin-right:auto; 
+    width:100px;
+    word-spacing: 2em;
+    border-spacing: 20px;
+    font-weight: bold;
+    color: darkblue
+  }
 
-}
-
-a {
-  color: lightpink
+  a {
+    color: darkblue;
+    font-weight: bold;
+  }
 }
